--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Abraham Tha VR Scene</title>
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
 </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
+  <a-scene>
+    <a-entity environment="preset: goldmine; dressingAmount:0;"></a-entity>
+    <!-- strt of house-->
+     <a-box id="floor" position="0 0 0" scale="10.5 10.5" rotation="90 0 0" color="#35393C" ></a-box>
+    <a-box id="wall1" position="0  1.473  4.907" rotation="0  0  0" scale="10  3  0.2" color="#85756E"></a-box>
+    <a-box id="wall2" position="0  1.473  -4.907" rotation="0  0  0" scale="10  3  0.2" color="#85756E"></a-box>
+    <a-box id="wall3" position="5.049  1.454  -0.008" rotation="0  -90  0" scale="10  3  0.2 " color="#85756E"></a-box>
+    <a-box id="wall4" position="-5.049  1.454  -0.008" rotation="0  -90  0" scale="10  3  0.2" color="#85756E"></a-box>
+    <a-cylinder id="triangle_front" segments-radial="3" position="0  3.874 4.907" rotation="-90  0  0" scale="5.774  0.2  1.8" color="#35393C"></a-cylinder>
+    <a-cylinder id="triangle_back" segments-radial="3" position="0  3.874 -4.907" rotation="-90  0  0" scale="5.774  0.2  1.8" color="#35393C"></a-cylinder>
+      <a-box id="roof_right" position="2.580  4.328  0" rotation="28.433  90  0" scale="10.931 0.20  6.110" color="#35393C"></a-box>
+      <a-box id="roof_left" position="-2.599  4.3321  -0.017" rotation="28.433  -90  0" scale="10.931 0.20  6.130" color="#35393C"></a-box> <!--end of house-->
+<!-- artwork strt -->
+<!-- frame -->
+    <a-box id="frame1" position="0 1.696 -4.841" rotation="0 0 0" scale="1.880 1.760" src=images/woodenframe.jpg>
+    <a-plane id="art1" src="images/pexels-roman-odintsov-5840086.jpg"-122861-376464.jpg scale="0.5  0.5  0.5" rotation="0 0 0" position="0.002  0.002  0.519"></a-plane>
+      </a-box> 
+    <!-- frame -->
+    <a-plane id="art2" src="images/pexels-photo-1099680.jpeg" scale="2 2 0.05" rotation="0 0 0" position="-3.126 1.725 -4.792"></a-plane>
+    <a-plane id="art3" src="images/pexels-photo-14678750.webp" scale="2 2 0.05" rotation="0 0 0" position="2.731 1.732 -4.802"></a-plane>
+
+
+
+
+
+
+
+
+
+      
+  </a-scene>
 </body>
 
 </html>
